2004-06-16  Raja R Harinath  <rharinath@novell.com>

	Include prototype completely-untested 'make bootstrap' support for W32.
	* Makefile.am (bootstrap): Define to fasterstrap for W32.
	(MCS_DIRS, MCS_FILES): Don't refer to Mono.CSharp.Debugger in W32.
	(tmpinst-dir): Change sub-make invoke to ...
	(tmpinst-dir-contents): ... this.  Build 'mono.bat' in W32 instead
	of 'mono' and 'mcs'.
	($(tmpinst)/bin/mono.bat): New.

2004-06-15  Dick Porter  <dick@ximian.com>

	* configure.in: Check for struct ip_mreqn and struct ip_mreq on
	windows too.  Fixes bug 55040.

Mon Jun 14 18:38:34 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* configure.in: better explain that --with-nptl is not related to
	NPTL, but to __thread support. Set sigaltstack support to off by
	default.

2004-06-12  Raja R Harinath  <harinath@acm.org>

	* Makefile.am (populate-runtime-subdir): Add _tmpinst directory
	to the PATH.

2004-06-11  Jackson Harper  <jackson@ximian.com>

	* runtime/net_2_0/Makefile.am:
	* runtime/net_1_1/Makefile.am: Remove signing patches
	
2004-06-11  Jackson Harper  <jackson@ximian.com>

	* man/mono.1: Add documentation for MONO_GAC_PREFIX.
	* runtime/net_2_0/Makefile.am: 
	* runtime/net_1_1/Makefile.am: Sign assemblies before
	installing. Do not sign ziplib, npgsql, or nunit assemblies. Sign mscorlib.
	
2004-06-11  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (populate-runtime-subdir): New target.  Does a
	controlled "make install" in the 'mcs/' directory to populate the
	'runtime' directory.
	(fasterstrap): Use it.

2004-06-10  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am ($(monoone_DATA),$(monotwo_DATA),$(monobins_DATA)):
	Don't copy from prefix.  Use $(LN_S) to point to the mcs/ tree.
	* runtime/net_1_1/Makefile.am (mscorlib.dll,$(gac_assemblies)): 
	Use $(LN_S) to point to the mcs/ tree, rather than copying.
	* runtime/net_2_0/Makefile.am (mscorlib.dll,$(gac_assemblies)): Likewise.

2004-06-10  Raja R Harinath  <rharinath@novell.com>	
